--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         },
         {
             "name": "Rehan",
-            "email": "",
+            "email": "babatundeakinse@gmail.com",
             "role": "Developer"
         }
     ],
